--- a/Website/index.html
+++ b/Website/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Your Page Title</title>
+   <title>Numa Isa Cloud Resume</title>
    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Include jQuery -->
    <script src="app.js"></script> <!-- Link to JavaScript file -->
